--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,18 +10,21 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <title>Masuka Matcha</title>
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="home">
         <div class="container-fluid text-center">
             <a href="#" class="navbar-brand d-lg-none d-block mx-auto">Masuka Matcha</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -58,14 +62,21 @@
             <div class="col-xl-7 col-lg-6 col-10 my-lg-0 bgColor rounded-5 p-4">
                 <h4 class="display-5 text-center">Family-owned bakery crafting sweet memories since 2015</h4>
                 <p class="p-4">
-                    Masuka Matcha is a local, family-owned bakery dedicated to celebrating the vibrant flavors of matcha in every pastry and
-                    drink we make. Founded with a passion for quality and community, we combine traditional baking techniques with
-                    innovative recipes to craft treats that are both delicious and memorable. From our freshly baked matcha-infused pastries
-                    to our handcrafted lattes, everything is made with the finest ingredients and a commitment to excellence.
+                    Masuka Matcha is a local, family-owned bakery dedicated to celebrating the vibrant flavors of matcha
+                    in every pastry and
+                    drink we make. Founded with a passion for quality and community, we combine traditional baking
+                    techniques with
+                    innovative recipes to craft treats that are both delicious and memorable. From our freshly baked
+                    matcha-infused pastries
+                    to our handcrafted lattes, everything is made with the finest ingredients and a commitment to
+                    excellence.
                     <br><br>
-                    What began as a small family project fueled by a shared love for matcha has grown into a cherished part of the
-                    community. At Mazuki Matcha, we take pride in offering a welcoming space where friends and families can gather, share
-                    stories, and enjoy the comforting flavors of our creations. Whether you're stopping by for a quick treat or looking for
+                    What began as a small family project fueled by a shared love for matcha has grown into a cherished
+                    part of the
+                    community. At Mazuki Matcha, we take pride in offering a welcoming space where friends and families
+                    can gather, share
+                    stories, and enjoy the comforting flavors of our creations. Whether you're stopping by for a quick
+                    treat or looking for
                     a cozy spot to unwind, we can't wait to share the magic of Mazuka Matcha with you!
                 </p>
             </div>
@@ -78,8 +89,10 @@
                 <h6 class="display-5 text-center pb-2">Daily Pasteries</h6>
                 <img src="imgs/breakfast.jpg" alt="" class="rounded-3 img-fluid w-75 m-auto">
                 <p class="text-center px-3 pt-5">
-                    Delight in our freshly baked matcha-inspired pastries, crafted each morning to perfection. From buttery matcha
-                    croissants to fluffy matcha cream buns, every bite is a harmonious blend of traditional techniques and the earth, rich
+                    Delight in our freshly baked matcha-inspired pastries, crafted each morning to perfection. From
+                    buttery matcha
+                    croissants to fluffy matcha cream buns, every bite is a harmonious blend of traditional techniques
+                    and the earth, rich
                     flavors of matcha. Perfect for a quick breakfast or a sweet afternoon pick-me-up.
                 </p>
             </div>
@@ -88,8 +101,10 @@
                     <h6 class="display-5 text-center pb-2">Matcha Drinks</h6>
                     <img src="imgs/matchaCoffe.jpg" alt="" class="rounded-3 img-fluid w-75 m-auto">
                     <p class="text-center px-3 pt-5">
-                        Sip on our expertly brewed match drinks, made using premium ceremonial-grade matcha. Whether you prefer a creamy matcha
-                        latte, a refreshing iced matcha, or a bold and earthy matcha shot, each cup is a celebration of this vibrant green tea's
+                        Sip on our expertly brewed match drinks, made using premium ceremonial-grade matcha. Whether you
+                        prefer a creamy matcha
+                        latte, a refreshing iced matcha, or a bold and earthy matcha shot, each cup is a celebration of
+                        this vibrant green tea's
                         natural flavors. Customizable to your taste, our drinks are perfect for any matcha enthusiast.
                     </p>
                 </div>
@@ -98,8 +113,10 @@
                 <h6 class="display-5 text-center pb-2">Daily Pasteries</h6>
                 <img src="imgs/cheesecake.jpg" alt="" class="rounded-3 img-fluid w-75 m-auto shadow">
                 <p class="text-center px-3 pt-5">
-                    Treat yourself to our matcha-infused specialty desserts, a unique fusion of flavors designed to satisfy any sweet tooth.
-                    From our velvety matcha cheesecakes to delicate matcha macarons, these desserts are a perfect way to indulge in the
+                    Treat yourself to our matcha-infused specialty desserts, a unique fusion of flavors designed to
+                    satisfy any sweet tooth.
+                    From our velvety matcha cheesecakes to delicate matcha macarons, these desserts are a perfect way to
+                    indulge in the
                     refined and versatile taste of matcha.
                 </p>
             </div>
@@ -164,13 +181,16 @@
                 <h6 class="">STAY IN TOUCH</h6>
                 <form action="">
                     <div class="mb-3">
-                        <input type="text" name="fullName" id="fullName" placeholder="First & Last Name" class="forms form-control" required>
+                        <input type="text" name="fullName" id="fullName" placeholder="First & Last Name"
+                            class="forms form-control" required>
                     </div>
                     <div class="mb-3">
-                        <input type="email" name="email" id="email" placeholder="Email" class="forms form-control" required>
+                        <input type="email" name="email" id="email" placeholder="Email" class="forms form-control"
+                            required>
                     </div>
                     <div class="mb-3">
-                        <textarea name="comments" id="comments" class="form-control" rows="4" placeholder="Comments"></textarea>
+                        <textarea name="comments" id="comments" class="form-control" rows="4"
+                            placeholder="Comments"></textarea>
                     </div>
                     <button type="submit" class="p-2">Contact</button>
                 </form>
@@ -182,4 +202,5 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
