--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Masuka Matcha</title>
 </head>
 
-<body>
+<body class="view">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="home">
         <div class="container-fluid text-center">
@@ -54,7 +54,8 @@
         <h1 class="display-1 fw-bold">MASUKA MATCHA</h1>
     </section>
 
-    <section class="container py-0" id="about">
+    <section class="container py-0 scrollBlock" id="about">
+        <h1 class="about display-3 mb-4 text-center ">About Masuka Matcha</h1>
         <div class="row justify-content-evenly">
             <div class="col-xl-4 col-lg-5 d-lg-block d-none text-center ">
                 <img src="imgs/matcha-latte.jpg" alt="" class="img-fluid h-100 object-fit-cover rounded-5 ">
@@ -83,7 +84,7 @@
         </div>
     </section>
 
-    <section class="container pt-5 pb-sm-5 pb-md-0 pb-lg-5 mt-lg-5 mt-5 rounded-5 menuSection bgColor" id="products">
+    <section class="container pt-5 pb-sm-5 pb-md-0 pb-lg-5 mt-lg-5 mt-5 rounded-5 menuSection bgColor scrollBlock" id="products">
         <div class="row justify-content-evenly w-auto">
             <div class="col-lg-4 col-sm-8 col-12 rounded-5 text-center ">
                 <h6 class="display-5 text-center pb-2">Daily Pasteries</h6>
