add view replacement for mobile

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
     </section>
 
-    <section class="py-5 bgColorFooter" id="contact">
+    <section class="py-5 bgColorFooter scrollBlock" id="contact">
         <div class="container row mx-auto justify-content-evenly">
             <div class="col-9 col-lg-4 text-center align-content-center">
                 <div class="icons pb-4">
