--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
     </section>
 
-    <section class="container py-5 gallery">
+    <section class="container py-5 gallery scrollBlock">
         <div class="row justify-content-center">
             <div class="col-6 col-lg-3">
                 <img src="imgs/matchaWhisk.jpg" alt="" class="img-fluid rounded-5">
