--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
     </nav>
 
     <section class="container-fluid text-center mb-5" id="heroSection">
-        <h1 class="display-6">Welcome to</h1>
-        <h1 class="display-1 fw-bold">MASUKA MATCHA</h1>
+        <div class="heroContent m-1 m-md-0">
+            <h1 class="display-6">Welcome to</h1>
+            <h1 class="display-1 fw-bold mb-3">MASUKA MATCHA</h1>
+            <p class="display-5">Authentic Matcha & Freshly Baked Goods</p>
+            <button class="border-0 p-3 m-3 rounded-4">Explore Our Menu</button>
+        </div>
     </section>
 
     <section class="container py-5 scrollBlock" id="about">
@@ -86,7 +90,7 @@
 
     <section class="container pt-5 pb-sm-5 pb-md-0 pb-lg-5 mt-lg-5 mt-5 rounded-5 menuSection bgColor scrollBlock" id="products">
         <h1 class="display-3 mb-5 text-center">What We Offer</h1>
-        <div class="row justify-content-evenly w-auto">
+        <div class="row justify-content-evenly w-auto productsContainer">
             <div class="col-lg-4 col-sm-8 col-12 rounded-5 text-center ">
                 <h6 class="display-5 text-center pb-2">Daily Pasteries</h6>
                 <img src="imgs/breakfast.jpg" alt="" class="rounded-3 img-fluid w-75 m-auto">
@@ -163,7 +167,7 @@
 
     <section class="py-5 bgColorFooter scrollBlock" id="contact">
         <div class="container row mx-auto justify-content-evenly">
-            <div class="col-9 col-lg-4 text-center align-content-center">
+            <div class="col-12 col-lg-4 text-center align-content-center">
                 <div class="icons pb-4">
                     <i class="bi bi-facebook"></i>
                     <i class="bi bi-twitter"></i>
@@ -176,7 +180,7 @@
                     <a class="" href="#products">PRODUCTS</a>
                 </div>
             </div>
-            <div class="col-9 col-lg-4 py-5 align-content-center text-center text-lg-start">
+            <div class="col-12 col-lg-4 py-5 align-content-center text-center text-lg-start">
                 <img src="imgs/logo/Asset1@3x.png" class="img-fluid rounded-5" alt="">
             </div>
             <div class="col-9 col-lg-3 contactForm">
